# voice-bot

./: .env.template  .gitignore  Dockerfile  README.md  app__init__.py  docker-compose.yml  inbound.py  k8s-port-forward.bat  main.py  outbound_call.py  pyproject.toml  system_prompt.template.md
app/: __init__.py  inbound.py  outbound_call.py  prompt_handler.py  voice_bot_events_manager.py
kubernetes/voice-bot-helm/voice-bot/: Chart.yaml  values.yaml
kubernetes/voice-bot-helm/voice-bot/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
observe/: prometheus.yml
observe/grafana/provisioning/dashboards/: dashboard-voicebot.json
