[tool.poetry]
name = "voice-bot-server"
version = "0.1.0"
description = "Voice Bot Server is a custom version of Vocode Telephony Server with FastAPI, designed for creating intelligent voice agents for phone calls."
authors = ["Vaskin Kissoyan <vaskin@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
python-dotenv = "^1.0.1"
vocode = {path = "../vocode-core", develop = true}
elevenlabs = "^1.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
